[gd_scene load_steps=22 format=3 uid="uid://c4f5n3jrj8sql"]

[ext_resource type="Script" uid="uid://bvun27nem82l1" path="res://Scripts/boss_fight.gd" id="1_bhtn8"]
[ext_resource type="Texture2D" uid="uid://o8ny6ufy4fmb" path="res://images/BossFightLevel/lattaanim-Sheet-export.png" id="2_n65jo"]

[sub_resource type="AtlasTexture" id="AtlasTexture_nq0y5"]
atlas = ExtResource("2_n65jo")
region = Rect2(320, 0, 160, 648)

[sub_resource type="AtlasTexture" id="AtlasTexture_47mo0"]
atlas = ExtResource("2_n65jo")
region = Rect2(480, 0, 160, 648)

[sub_resource type="AtlasTexture" id="AtlasTexture_y2k5v"]
atlas = ExtResource("2_n65jo")
region = Rect2(640, 0, 160, 648)

[sub_resource type="AtlasTexture" id="AtlasTexture_f0fes"]
atlas = ExtResource("2_n65jo")
region = Rect2(800, 0, 160, 648)

[sub_resource type="AtlasTexture" id="AtlasTexture_htj63"]
atlas = ExtResource("2_n65jo")
region = Rect2(160, 0, 160, 648)

[sub_resource type="AtlasTexture" id="AtlasTexture_fl1h7"]
atlas = ExtResource("2_n65jo")
region = Rect2(960, 0, 160, 648)

[sub_resource type="AtlasTexture" id="AtlasTexture_5lasl"]
atlas = ExtResource("2_n65jo")
region = Rect2(1120, 0, 160, 648)

[sub_resource type="AtlasTexture" id="AtlasTexture_tt0ij"]
atlas = ExtResource("2_n65jo")
region = Rect2(1280, 0, 160, 648)

[sub_resource type="AtlasTexture" id="AtlasTexture_cgdq2"]
atlas = ExtResource("2_n65jo")
region = Rect2(1440, 0, 160, 648)

[sub_resource type="AtlasTexture" id="AtlasTexture_1bgo6"]
atlas = ExtResource("2_n65jo")
region = Rect2(1600, 0, 160, 648)

[sub_resource type="AtlasTexture" id="AtlasTexture_mgb2n"]
atlas = ExtResource("2_n65jo")
region = Rect2(1760, 0, 160, 648)

[sub_resource type="AtlasTexture" id="AtlasTexture_q5cxl"]
atlas = ExtResource("2_n65jo")
region = Rect2(1920, 0, 160, 648)

[sub_resource type="AtlasTexture" id="AtlasTexture_pr63o"]
atlas = ExtResource("2_n65jo")
region = Rect2(2080, 0, 160, 648)

[sub_resource type="AtlasTexture" id="AtlasTexture_gvp16"]
atlas = ExtResource("2_n65jo")
region = Rect2(2240, 0, 160, 648)

[sub_resource type="AtlasTexture" id="AtlasTexture_mi35h"]
atlas = ExtResource("2_n65jo")
region = Rect2(2400, 0, 160, 648)

[sub_resource type="AtlasTexture" id="AtlasTexture_wsot8"]
atlas = ExtResource("2_n65jo")
region = Rect2(2560, 0, 160, 648)

[sub_resource type="AtlasTexture" id="AtlasTexture_jj2l7"]
atlas = ExtResource("2_n65jo")
region = Rect2(2720, 0, 160, 648)

[sub_resource type="AtlasTexture" id="AtlasTexture_odjl2"]
atlas = ExtResource("2_n65jo")
region = Rect2(2880, 0, 160, 648)

[sub_resource type="SpriteFrames" id="SpriteFrames_51gxd"]
animations = [{
"frames": [{
"duration": 2.0,
"texture": SubResource("AtlasTexture_nq0y5")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_47mo0")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_y2k5v")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_f0fes")
}],
"loop": false,
"name": &"LazerAttack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_htj63")
}],
"loop": true,
"name": &"Normal",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fl1h7")
}],
"loop": false,
"name": &"PukeAttack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5lasl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tt0ij")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cgdq2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1bgo6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mgb2n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q5cxl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pr63o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gvp16")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mi35h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wsot8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jj2l7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_odjl2")
}],
"loop": false,
"name": &"SmashAttack",
"speed": 5.0
}]

[node name="BossFight" type="Node2D"]
script = ExtResource("1_bhtn8")

[node name="ZachLatta" type="AnimatedSprite2D" parent="."]
position = Vector2(537, 423)
sprite_frames = SubResource("SpriteFrames_51gxd")
animation = &"SmashAttack"
frame = 11
frame_progress = 0.16515112

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
